[package]
name = "identconv"
authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/identconv"
description = """
Convenient macros that turn idents or string literals into other idents or string literals by case converting.
"""
keywords = ["macros", "ident", "case", "casing", "string"]
version = "0.2.0"
edition = "2021"

[lib]
proc-macro=true

[dependencies]
convert_case = "0.6"
litrs = "0.4"
